# jupyter-builder

./: .copier-answers.yml  .eslintignore  .eslintrc.js  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  __init__.py  base_extension_app.py  commands.py  coreconfig.py  debug_log_file_mixin.py  eslint.config.mjs  federated_extensions.py  federated_extensions_requirements.py  jupyterlab.py  lab_app.py  main.py  package.json  pyproject.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml  builder-tests.yml  check-release.yml  downstream-tests.yml  license-header.yml  publish-release.yml  python-tests.yml  verify-yarn-bundle.yml
builder/: tsconfig.json  tsconfig.tsbuildinfo
commands/: build.py  develop.py  watch.py
extension_commands/: develop.py
jupyter_builder/: __init__.py  _version.py  _yarn_info.py  base_extension_app.py  commands.py  constants.py  core_path.py  debug_log_file_mixin.py  federated_extensions.py  federated_extensions_requirements.py  jlpm.py  jupyter_app.py  jupyter_core.py  jupyter_server.py  jupyterlab.py  jupyterlab_semver.py  jupyterlab_server.py  lab_app.py  main.py  migrate.py  paths.py  yarn.js
jupyter_builder/commands/: watch.py
jupyter_builder/extension_commands/: build.py  develop.py  watch.py
scripts/: build_static.py  bump_version.py
src/: build-labextension.ts  build.ts  extensionConfig.ts  index.ts  webpack-plugins.ts  webpack.config.base.ts
tests/: __init__.py  conftest.py  test_core_path.py  test_extension_config.py  test_find_packages.py  test_jlpm.py  test_tpl.py  test_yarn_info.py
tests/dummy/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml
tests/dummy/.github/workflows/: build.yml  check-release.yml
tests/dummy/dummy1/: __init__.py
tests/dummy/src/: index.ts
tests/dummy/src/__tests__/: dummy1.spec.ts
tests/dummy/ui-tests/tests/: dummy1.spec.ts
