# Copyright (c) Jupyter Development Team.
# Distributed under the terms of the Modified BSD License.

[build-system]
requires = ["hatchling>=1.21.1", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyter_builder"
description = "JupyterLab build tools"
readme = "README.md"
license = "BSD-3-Clause AND MIT AND ISC"
license-files = ["LICENSE", "THIRD_PARTY_LICENSES/*.txt"]
requires-python = ">=3.10"
authors = [
    { name = "Jupyter Development Team", email = "jupyter@googlegroups.com" },
]
keywords = ["ipython", "jupyter"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["traitlets", "requests", "jupyter-core", "tomli; python_version < '3.11'"]
dynamic = ["version"]

[project.urls]
Homepage = "https://jupyter.org"
Source = "https://github.com/jupyterlab/jupyter-builder"
Issues = "https://github.com/jupyterlab/jupyter-builder/issues/new/choose"
Zulip = "https://jupyter.zulipchat.com/#narrow/channel/469762-jupyterlab"
Pypi = "https://pypi.org/project/jupyter-builder"

[project.optional-dependencies]
test = [
    "coverage",
    "pytest>=7.0",
    "pytest-check-links>=0.7",
    "pytest-cov",
    "copier>=9.3,<10",
    "jinja2-time"
]
# Check ruff version is aligned with the one in .pre-commit-config.yaml
dev = ["build", "mypy", "pre-commit", "hatch", "ruff==0.15.11"]

[project.scripts]
jupyter-builder = "jupyter_builder.main:main"
jlpm = "jupyter_builder.jlpm:main"

[tool.check-wheel-contents]
ignore = ["W002", "W004"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build.hooks.version]
path = "jupyter_builder/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "node jupyter_builder/yarn.js",
    "node jupyter_builder/yarn.js clean:lib",
    "node jupyter_builder/yarn.js build:lib:prod",
]
before-build-python = [
    "node jupyter_builder/yarn.js clean:lib",
    "node jupyter_builder/yarn.js clean:lintcache",
]

[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
strict = true
pretty = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "module:pkg_resources is deprecated:DeprecationWarning",
    "module:This template was designed for Copier:copier.errors.OldTemplateWarning",
    "ignore::ImportWarning",
]

log_cli_level = "INFO"
minversion = "7"
testpaths = ["tests/"]
norecursedirs = ".git _build .ipynb_checkpoints"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--pdbcls=IPython.terminal.debugger:Pdb",
    "--junitxml=junit.xml",
]
xfail_strict = true

[tool.repo-review]
ignore = ["PC111", "PC180", "PY004", "PY007", "RTD100"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["FBT002", "FBT003"]

[tool.ruff.lint.per-file-ignores]
# S101 Use of `assert` detected
"tests/*" = ["S101", "S603", "S607"]
"jupyter_builder/main.py" = ["RUF012"]
# N806 Variable `tM` in function should be lowercase
# N816 Variable `comparatorTrimReplace` in global scope should not be mixedCase
# PLC1901 test can be simplified as an empty string is falsey
# PLR1714 Consider merging multiple comparisons
# PLR5501 Use `elif` instead of `else` then `if`, to reduce indentation
# ANN401 typing.Any is necessary for untyped semver/comparator objects (ported JS library)
# BLE001 broad exception catch is intentional in several public API functions
# FBT001 bool positional args are part of the original node-semver API
# SIM102 nested if statements match the original JS logic and are intentional
# TD*/FIX003 xxx: markers
"jupyter_builder/jupyterlab_semver.py" = [
    "ANN401",
    "BLE001",
    "C901",
    "EM101",
    "EM102",
    "FBT001",
    "N806",
    "N816",
    "PLC1901",
    "PLR0912",
    "PLR0915",
    "PLR1714",
    "PLR5501",
    "RUF059",
    "SIM102",
    "FIX003",
    "TD001",
    "TD002",
    "TD003",
    "TD004",
    "TD005",
]
